fixed roadmap integration component and .env.example

--- a/.env.example
+++ b/.env.example
@@ -15,10 +15,10 @@ DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/xxxxxxxxxxxxxxxxxxxxxxxxxxx
 # Luma Integration
 LUMA_API_KEY=your_luma_api_key
 
-# Google Workspace Integration
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_REFRESH_TOKEN=your_google_refresh_token
+# Google Meet Integration
+GOOGLE_MEET_CLIENT_ID=your_google_meet_client_id
+GOOGLE_MEET_CLIENT_SECRET=your_google_meet_client_secret
+GOOGLE_MEET_REFRESH_TOKEN=your_google_meet_refresh_token
 
 # LinkedIn Integration
 LINKEDIN_CLIENT_ID=your_linkedin_client_id
