--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,11 @@ GOOGLE_MEET_REFRESH_TOKEN=your_google_meet_refresh_token
 LINKEDIN_CLIENT_ID=your_linkedin_client_id
 LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
 LINKEDIN_ACCESS_TOKEN=your_linkedin_access_token
+
+# Google Meet Integration
+GOOGLE_MEET_CLIENT_ID=your_google_meet_client_id
+GOOGLE_MEET_CLIENT_SECRET=your_google_meet_client_secret
+GOOGLE_MEET_REFRESH_TOKEN=your_google_meet_refresh_token
+
+NEXT_PUBLIC_API_URL=http://localhost:5000
+FRONTEND_PORT=3000
