--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Supabase Integration
 SUPABASE_URL=YOUR_SUPABASE_PROJECT_URL
 SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
+SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
 
 # OpenAI Integration
 OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -30,5 +31,6 @@ GOOGLE_MEET_CLIENT_ID=your_google_meet_client_id
 GOOGLE_MEET_CLIENT_SECRET=your_google_meet_client_secret
 GOOGLE_MEET_REFRESH_TOKEN=your_google_meet_refresh_token
 
+# For development
 NEXT_PUBLIC_API_URL=http://localhost:5000
 FRONTEND_PORT=3000
