--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.54.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-  "cookie-parser": "^1.4.6",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "openai": "^5.12.2",
