--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "node --watch src/server.js",
+  "build": "echo \"back-end: nothing to build (JS only)\"",
     "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
