--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "main": "src/server.js",
   "scripts": {
-    "dev": "node --watch src/server.js",
-  "build": "echo \"back-end: nothing to build (JS only)\"",
-    "start": "node src/server.js",
+  "dev": "node --watch src/server.js",
+  "build": "npm ci || npm install",
+  "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
