--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,8 @@
   "main": "src/server.js",
   "scripts": {
   "dev": "node --watch src/server.js",
-  "build": "npm ci || npm install",
+  "build": "npm install --omit=dev",
+  "prestart": "node -e \"try{require.resolve('express')}catch(e){process.exit(1)}\" || npm install --omit=dev",
   "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
