--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ GOOGLE_MEET_CLIENT_ID=your_google_meet_client_id
 GOOGLE_MEET_CLIENT_SECRET=your_google_meet_client_secret
 GOOGLE_MEET_REFRESH_TOKEN=your_google_meet_refresh_token
 
-# For development
+# Frontend API base URL
+# Local development:
 NEXT_PUBLIC_API_URL=http://localhost:5000
 FRONTEND_PORT=3000
+
+# Production (Vercel -> Render):
+# NEXT_PUBLIC_API_URL=YOUR_RENDER_URL
+# FRONTEND_PORT=3000
